webbox/webbox/main/static/webbox/css/index.css
/* ... */
.leftCourse {
    height: 500px;
    overflow-x: hidden;
    overflow-y: scroll;
}

.leftCourse .card a {
    width: 300px;
}

.rightCourse {
    height: 450px;
    width: 100%;
    border: 3px solid var(--background-color);
    padding: 4px;
    border-radius: 8px;
}

.rightCourse iframe {
    height: 100%;
    width: 100%;
    border: none;
    border-radius: 4px;
}

#commentForm {
    border: none;
    width: 100%;
    height: 355px;
}

.card-body {
    background-color: var(--black);
}

.card-body * {
    color: var(--background-color);
    font-family: 'Lato', sans-serif;
}

.card-body button {
    color: var(--black);
    background-color: var(--background-color);
    padding: 4px 8px;
    margin-top: 4px;
    border-radius: 16px;
    margin-bottom: 8px;
    margin-top: 8px;
    cursor: pointer;
    width: 100%;
    border: none;
    transition: all 200ms;
}

.card-body button:hover {
    color: var(--background-color);
    background-color: var(--black);
}

.card-body p > input,
.card-body p > textarea {
    margin-left: 4px;
    color: var(--black);
    font-size: 20px;
    border-radius: 16px;
    border: none;
    padding: 0 8px;
}

.card-body p > textarea {
    height: 100px;
}

.coursecard {
    background-color: var(--black);
    background-size: 100% auto;
    box-shadow: 0px 0px 8px var(--black);
    margin: 16px 0;
    padding: 8px 16px;
    justify-content: center;
    align-items: center;
    min-height: 80vh;
    border-radius: 12px;
    margin-right: 100px;
    width: 1067px;
}

.coursecard > h2 {
    color: var(--background-color);
    font-family: 'Dela Gothic One', sans-serif;
    font-size: 32px;
}

.coursesflex {
    display: flex;
    flex-direction: row;
    margin-top: 16px;
}

.coursesflex img {
    border-radius: 16px;
    margin-right: 16px;
}

.coursestext {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.ct1 * {
    color: var(--background-color);
    font-family: 'Lato', sans-serif;
    font-size: 18px;
}

.ct2 * {
    color: var(--background-color);
    font-family: 'Dela Gothic One', sans-serif;
    font-size: 16px;
}

.ct2 a {
    text-decoration: underline;
}

.card-body p {display: flex; flex-direction: column}

#id_course {
    border: none;
    border-radius: 16px;
    color: var(--background-color);
}

.comments-iframe-body {
    background-color: var(--black);
}

p > label {
    color: var(--background-color);
    font-family: 'Lato', sans-serif;
    font-size: 18px;
}

.coursesearch form {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.coursesearch p {
    display: flex;
    align-items: center;
    justify-content: center;
}

.coursesearch p:nth-child(2n) {
    margin-right: 0;
}

.coursesearch p * {
    width: 350px;
}

.coursesearch p label {
    width: 70px;
    margin-right: 16px;
}

#id_field_search,
#id_price_from,
#id_price_to {
    margin: 11px;
    
    font-size: 20px;
    border-radius: 16px;
    border: none;
    padding: 0 8px;
}


.coursesearch p:first-child {
    width: 100% !important;
}

#id_field_search {
    width: 100%;
}

.btn-primary {
    color: var(--black);
    background-color: var(--background-color);
    font-family: 'Dela Gothic One', sans-serif;
    font-size: 16px;
    padding: 4px 8px;
    border: none;
    margin-bottom: 16px;
    border-radius: 16px;
    width: 100%;
    transition: all 200ms;
    cursor: pointer;
}

.btn-primary:hover {
    color: var(--background-color);
    background-color: var(--black);
}

.genericsection {
    background-color: var(--black);
    background-size: 100% auto;
    box-shadow: 0px 0px 8px var(--black);
    margin: 16px 0;
    padding: 8px 16px;
    border-radius: 12px;
}

.genericsection h3 {
    color: var(--background-color);
    font-weight: 100;
    font-family: 'Dela Gothic One', sans-serif;
    text-shadow: var(--black) 2px 2px 4px;
    font-weight: 100;
    font-size: 32px;
}

.genericsection p {
    color: var(--background-color);
    font-weight: 100;
    font-family: 'Lato', sans-serif;
    text-shadow: var(--black) 2px 2px 4px;
    font-weight: 100;
    font-size: 18px;
}

.payment {
    background-color: var(--black);
    background-size: 100% auto;
    box-shadow: 0px 0px 8px var(--black);
    margin: 16px 0;
    padding: 8px 16px;
    border-radius: 12px;
}

.payment p {
    display: flex;
    flex-direction: column;
    margin: 16px 0;
}

.payment p input,
.payment p select {
    color: var(--black) !important;
    background-color: var(--background-color);
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    padding: 4px 8px;
    border: none;
    border-radius: 16px;
    transition: all 200ms;
}

.payment p select option {
    color: var(--black) !important;
}

.btn-primary:hover {
    color: var(--background-color);
    background-color: var(--black);
}

#id_number_card_helptext,
#id_cvv_card_helptext,
#id_name_card_helptext,
#id_phone_helptext,
#id_tg_nick_helptext {
    color: var(--background-color);
    font-weight: 100;
    font-family: 'Lato', sans-serif;
    text-shadow: var(--black) 2px 2px 4px;
    font-weight: 100;
    font-size: 18px;
}

.genericlinks {
    display: flex;
    gap: 16px;
}

.errorform {
    display: flex;
    height: 68vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.genericlinks a {
    text-decoration: underline;
    color: var(--background-color);
    font-weight: 100;
    font-family: 'Lato', sans-serif;
    text-shadow: var(--black) 2px 2px 4px;
    font-size: 18px;
}

.unpayform {
    display: flex;
    height: 68vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.unpayform p {
    color: var(--background-color);
    font-family: 'Dela Gothic One', sans-serif;
    font-size: 32px;
}

.dopayform {
    display: flex;
    height: 68vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
/* ... */

